<resources>
    <string name="app_name">dawning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    //common
    <string name="title_activity_radio_home">电台主页</string>
    <string name="title_activity_radio_detail">电台</string>
    <string name="title_activity_program_category">节目分类</string>
    <string name="title_activity_radio_discover">发现电台</string>
    <string name="nav_share">分享</string>

    //navigationView
    <string name="nav_my_mix">我的播单</string>
    <string name="nav_my_favorite">我的收藏</string>
    <string name="nav_meditation_record">冥想记录</string>
    <string name="nav_mood_curve">心情曲线</string>
    <string name="nav_my_article">我的文章</string>
    <string name="nav_my_program">我的节目</string>
    <string name="nav_my_music">我的音乐</string>
    <string name="nav_download_manage">下载管理</string>
    <string name="action_settings">设置</string>

    <string name="nav_search">搜索</string>

    //radioHome
    <string name="nav_program_classification">节目分类</string>
    <string name="nav_artist_radio">主播电台</string>
    <string name="text_program_recommended">节目推荐</string>

    //radioDetail
    <string name="action_subscribe">订阅</string>
    <string name="action_play_all">播放全部</string>

    //DiaryHome
    <string name="diary_add_title">标题</string>
    <string name="add_diary_mood">心情得分</string>

    //HSM
    <string name="setupMessagePush">消息通知</string>
    <string name="setupPersonalizedSkin">个性皮肤</string>
    <string name="setupCleanCache">清除缓存</string>
    <string name="setupAboutUs">关于我们</string>
    <string name="setupChangeAccount">切换账号</string>

    <string name="meditationAvgTime">平均时长</string>
    <string name="meditationTotalTime">总时长</string>
    <string name="meditationTimes">总次数</string>
    <string name="meditationFrequency">冥想频率</string>

    <string name="minute">分钟</string>
    <string name="times">次</string>
    <string name="timesPerDay">次/天</string>

    <string name="moodOfWeek">一周心情</string>
    <string name="moodOfAvgWeek">一周平均心情</string>
    <string name="musicMix">音乐播单</string>
    <string name="programMix">节目播单</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>


    //Think


    //articleHome
    <string name="nav_article_classification">文章分类</string>
    <string name="text_article_recommended">推荐文章</string>
    <string name="text_article_abstract">文章摘要</string>
    <string name="text_article_time">时间</string>
    <string name="text_article_category">文章类别</string>
    <string name="text_article_title">文章标题</string>
    //radioDetail

    <string name="title_activity_main2">Main2Activity</string>

</resources>
