<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.RadioHomeActivity"
    tools:showIn="@layout/app_bar_radio_home">

    <com.jude.rollviewpager.RollPagerView
        android:id="@+id/radio_home_roll_banner"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rollviewpager_play_delay="2000" />

    <ImageView
        android:id="@+id/ic_program_classification"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="1dp"
        android:src="@drawable/program_classification"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ic_artist_radio"
        app:layout_constraintTop_toBottomOf="@+id/radio_home_roll_banner" />

    <TextView
        android:id="@+id/text_program_classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nav_program_classification"
        app:layout_constraintEnd_toEndOf="@+id/ic_program_classification"
        app:layout_constraintStart_toStartOf="@+id/ic_program_classification"
        app:layout_constraintTop_toBottomOf="@+id/ic_program_classification" />

    <ImageView
        android:id="@+id/ic_artist_radio"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/ic_program_classification"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_home_roll_banner"
        app:srcCompat="@drawable/artist_radio" />

    <TextView
        android:id="@+id/text_artist_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nav_artist_radio"
        app:layout_constraintEnd_toEndOf="@+id/ic_artist_radio"
        app:layout_constraintStart_toStartOf="@+id/ic_artist_radio"
        app:layout_constraintTop_toBottomOf="@+id/ic_artist_radio" />

    <TextView
        android:id="@+id/boundary_radio_home"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_program_classification"
        tools:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_program_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/text_program_recommended"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boundary_radio_home" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_program"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_program_recommended"
        tools:listitem="@layout/program_item" />
</android.support.constraint.ConstraintLayout>