<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.meditationReport">

    <LinearLayout
        android:id="@+id/common_title_ll"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/dawning_color_main"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/common_iv_back"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/common_tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="添加日记"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/common_iv_test"
            android:layout_width="50dp"
            android:layout_height="30dp"

            />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dawning_color_blue"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/meditation_report_border"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingTop="30dp"
                android:paddingRight="2dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/meditationAvgTimeHead"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/meditationAvgTime"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/meditationAvgTimeMiddle"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="bottom|center_horizontal"
                    android:padding="0dp"
                    android:textSize="@android:dimen/notification_large_icon_width"
                    tools:fontFamily="serif" />

                <TextView
                    android:id="@+id/meditationAvgTimeTail"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:paddingBottom="15dp"
                    android:text="@string/minute"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/meditation_report_border"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingTop="30dp"
                android:paddingRight="2dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.516">

                <TextView
                    android:id="@+id/meditationTimesHead"
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/meditationTimes"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/meditationTimesMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="bottom|center_horizontal"
                    android:textSize="64dp" />

                <TextView
                    android:id="@+id/meditationTimesTail"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:paddingBottom="15dp"
                    android:text="@string/times"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/meditation_report_border"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingTop="30dp"
                android:paddingRight="2dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:id="@+id/meditationTotalTimeHead"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/meditationTotalTime"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/meditationTotalTimeMiddle"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="bottom|center_horizontal"
                    android:textSize="64dp" />

                <TextView
                    android:id="@+id/meditionTotalTimeTail"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:paddingBottom="15dp"
                    android:text="@string/minute"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/meditation_report_border"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingTop="30dp"
                android:paddingRight="2dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                <TextView
                    android:id="@+id/meditationFrequencyHead"
                    android:layout_width="57dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/meditationFrequency"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/meditationFrequencyMiddle"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="bottom|center_horizontal"
                    android:textSize="64dp" />

                <TextView
                    android:id="@+id/meditationFrequencyTail"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:paddingBottom="15dp"
                    android:text="@string/timesPerDay"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>